# achilles

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTEPAD.md  README.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  main.go
.github/workflows/: ci.yml  docker-publish.yml  release.yml
cmd/benchmarks/: README.md  delete_test.go  get_test.go  helpers_test.go  insert_documents_bench_test.go  insert_http_test.go  insert_test.go  profile_insert.go  query_test.go  update_test.go
cmd/doc-store/: main.go  sort_test.go
cmd/faiss-examples/: benchmark_faiss_test.go  flat_example.go  ivf_example.go
cmd/openapi-gen/: main.go
cmd/wt-examples/: bson-parallel.go  bson.example.go  cache_performance_demo.go  range-scan-example.go  range-scan-perf-test.go
pkgs/db_service/: bson_decode.go  bson_pool.go  doc.md  errors.go  filter.go  filter_test.go  impl.go  interface.go  interface_delete_test.go  interface_test.go  internal_id.go  internal_id_test.go  label_cache.go
pkgs/faiss/: README.md  faiss_service.go  faiss_service_cgo.go  faiss_service_nocgo.go  index_cache.go  index_cache_test.go  index_idmap_test.go
pkgs/logger/: logger.go
pkgs/wiredtiger/: wt_service.go  wt_service_cgo.go  wt_service_nocgo.go
scripts/test-data/: README.md  datagen.py  embed_query.py  pyproject.toml
scripts/test-data/doc-corpus/: ancient_history.txt  culinary_arts.txt  sample.txt  space_exploration.txt
sdk/: .gitignore  SPEC.md  sdk_chromadb_compatibility.md  sdk_examples.md  sdk_spec.md  sdk_types.md
sdk/python/: .flake8  README.md  SPEC.md  pyproject.toml
sdk/python/achillesdb/: __init__.py  client.py  collection.py  database.py  schemas.py  types.py  validators.py  where.py
sdk/python/achillesdb/api/: collection.py  database.py  document.py
sdk/python/achillesdb/http/: connection.py  retry.py
sdk/python/tests/: openapi.yaml  sandbox_async.py  sandbox_sync.py
sdk/python/tests/integration/: conftest.py  test_client.py  test_collection.py  test_database.py  test_openapi_contract.py  test_query.py  test_server_bugs.py
sdk/python/tests/mocked/: conftest.py  test_client.py  test_collection.py  test_collection_api.py  test_database.py  test_document_api.py
sdk/python/tests/sandbox_sample/: sandbox_async.py  sandbox_sync.py
sdk/python/tests/unit/: test_api_urls.py  test_collection_logic.py  test_config.py  test_connection_helpers.py  test_errors.py  test_http_parsing.py  test_retry.py  test_schemas.py  test_util.py  test_validators.py  test_where.py
sdks/: SPEC.md
sdks/python3/: .TODO  .coverage  pyproject.toml  repro_bug.py
sdks/python3/achillesdb/: __init__.py  client.py  collection.py  config.py  database.py  errors.py  schemas.py  types.py  util.py  validators.py  where.py
sdks/python3/achillesdb/api/: collection.py  collection_api.py  database.py  document.py
sdks/python3/achillesdb/http/: connection.py  retry.py
sdks/python3/tests/integration/: test_collection.py
sdks/python3/tests/mocked/: test_document_api.py
sdks/python3/tests/sandbox_sample/: sandbox_async.py  sandbox_sync.py
sdks/python3/tests/unit/: test_retry.py
server/: collection.handler.go  mem_darwin.go  mem_linux.go  middleware.go  openapi.go  openapi_gen.go  router.go  server.go  utils.go
